--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,14 @@
         android:theme="@style/Theme.QuizApp"
         tools:targetApi="31">
         <activity
-            android:name=".QuizQuestionActivity"
+            android:name=".ResultActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            />
+            android:theme="@style/NoActionBarTheme" />
+        <activity
+            android:name=".QuizQuestionActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
